Overflow bug solved

--- a/src/components/banner/banner.module.scss
+++ b/src/components/banner/banner.module.scss
@@ -1,5 +1,6 @@
-
-
+*{
+    padding: 0;
+}
 .carouselContainer{
     width: 90%;
     margin-left: 5%;
