--- a/src/components/products/product/product.module.scss
+++ b/src/components/products/product/product.module.scss
@@ -1,12 +1,7 @@
-*{
-    padding: 0;
-    margin: 0;
-    overflow-x: hidden;
-}
-
 .container{
-    width: 90%;
+    width: 80%;
     margin-left: 5%;
+    margin-right: 15%;
     margin-top: 5%;
     margin-bottom: 5%;
     display: flex;
