--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,7 +3,9 @@ body{
 	margin-right: 0px;
 	margin-bottom: 0px;
 	margin-top: 0px;
+	padding: 0;
 	width: 100vw;
 	font-family: 'Montserrat', 'Gothic A1', sans-serif;
 	background-color: #f4ebdb;
+	overflow-x: hidden;
 }
